# HccEngine

./: CMakeLists.txt  README.md  ddict.json  ibus-engine-myengine  ibus-myengine.spec.in  ist.sh
icons/: Makefile.am
lib/: ibus-engine-myengine  libgio-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgthread-2.0.so.0  libibus-1.0.so.5  pack.sh
m4/: Makefile  Makefile.in
po/: Makefile  Makefile.in  zh_CN.po
src/: CMakeLists.txt  cmake_install.cmake  ddict.json  drawwidget.cpp  drawwidget.h  engine.c  engine.cpp  engine.h  getHan.cpp  getHan.h  ico.rc  main.cpp  myengine.xml  myengine.xml.in  myengine.xml.in.in  xydragablewidget.h  xypushbutton.cpp  xypushbutton.h  xyqstringview.cpp  xyqstringview.h  xyskin.cpp  xyskin.h  xyvdragabletranslateview.h  xyvirtualkeyboard.cpp  xyvirtualkeyboard.h
src/chineseInput/: xyinputsearchinterface.h
